<resources>
    <string name="app_name">week03_moni</string>
    <string name="regin_pwd">登录密码</string>
    <string name="regin_yan">验证码</string>
    <string name="regin_phone">手机号</string>
    <string name="yiyou">已有账户?立即登录</string>
    <string name="regin">立即注册</string>
    <string name="user_name">请输入用户名</string>
    <string name="user_pwd">请输入密码</string>
    <string name="rem_pwd">记住密码</string>
    <string name="quiet_regin">快速注册</string>
    <string name="login">登录</string>
</resources>
