<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/deng"
    tools:context=".login.LoginActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="180dp"></RelativeLayout>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_pwd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/rem_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_pwd" />

        <TextView
            android:id="@+id/quiet_regin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/quiet_regin" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="#ff5f71"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/login" />


</LinearLayout>